tests/NormalTests/paczka1/small_fuzzy/10617196.err
Error in line 1: gXH7zZ A938 82,7
Error in line 3: ZNzNh7BNZwn A938 76,3
Error in line 13: A938 A54 98,0
